Fixed alignment of buttons after class name change.

--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@
     justify-content: center;
 }
 
-.number-buttons, .operator-buttons {
+.buttons {
     display: flex;
     align-items: center;
     justify-content: center;
